[package]
name = "site-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64ct = { version = "1.3", features = ["alloc"] }
blake2 = "0.10"
clap = { version = "3.0.7", features = ["derive"] }
dircpy = "0.3.8"
glob = "0.3.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
serde = { version = "1", features = ["derive"] }
tera = { version = "1", default-features = true }
thiserror = "1.0"
toml = "0.5"

[dev-dependencies]
serde_json = "1"